Jul 16, 2002

* Fixed problem with pre-fetching if rows are partially instantiated.
  Petter Egesund.

Jul 13, 2002

* Fixed handling default in types(Types) option of odbc_query.

* Many textual improvements in the documentation.

Jul 12, 2002

* Add alpha findall/2 option to odbc_query/4 and odbc_prepare/5.

* Add number of rows affected return to odbc_query/4 and odbc_execute/2.

* Succeed deterministically if last value is retrieved.

* Documentation updates

Jul 10, 2002

* Provide access to source (table and column) of result-columns.

Jul 9, 2002

* Added writing NULL-data with prepared statements.

* Added programmable NULL-data representation (Mike Elston).

Jul 7, 2002

* Initial alpha release.